# toxic_classificator

./: .gitignore  .pre-commit-config.yaml  PROJECT_SUMMARY.txt  README.md  commands.py  convert_to_onnx.py  convert_to_tensorrt.sh  example_input.json  example_input.txt  pyproject.toml  start_triton_docker.sh  start_triton_server.sh  task.txt  triton_client.py
.dvc/: config
configs/: config.yaml
configs/data/: toxic_data.yaml
configs/model/: qwen.yaml
configs/training/: lora_training.yaml
data/: raw.dvc
toxic_classificator/data/: download_data.py  prepare_data.py
toxic_classificator/inference/: export_onnx.py  predict.py
toxic_classificator/models/: baseline.py  utils.py
toxic_classificator/training/: evaluate.py  train.py
triton_model_repository/toxic_classificator/: config.pbtxt
